--- a/wp-content/themes/defense360/sass/pages/_posts.scss
+++ b/wp-content/themes/defense360/sass/pages/_posts.scss
@@ -172,8 +172,18 @@ article.post {
 
 	/*----------  Post Thumbnails  ----------*/
 	.post-thumbnailContainer {
-		max-width: 100%;
+		max-width: 100vw;
 		margin-bottom: 0.5rem;
+		width: 100vw;
+		margin-left: -1rem;
+		margin-right: -1rem;
+
+		@include breakpoint("medium") {
+			max-width: 100%;
+			width: initial;
+			margin-left: initial;
+			margin-right: initial;
+		}
 
 		&.home-secondaryFeature {
 			max-width: 175px;
@@ -189,14 +199,7 @@ article.post {
 
 		img {
 			height: auto;
-			width: 100vw;
-			margin-left: -1rem;
-			margin-right: -1rem;
-
-			@include breakpoint("medium") {
-				width: 100%;
-				margin: initial;
-			}
+			width: 100%;
 		}
 	}
 
