--- a/wp-content/themes/defense360/sass/layout/_header.scss
+++ b/wp-content/themes/defense360/sass/layout/_header.scss
@@ -202,6 +202,10 @@ header.site-header {
 					@include breakpoint("medium") {
 						@include fontSize(13px);
 					}
+
+					&:hover {
+						color: $bright-green;
+					}
 				}
 
 				@include breakpoint("medium") {
@@ -217,6 +221,11 @@ header.site-header {
 		.nav-searchIconContainer {
 			text-align: right;
 			padding: 0;
+
+			.icon-search:hover {
+				cursor:pointer;
+				color: $bright-green;
+			}
 		}
 	}
 
