--- a/wp-content/themes/defense360/sass/pages/_archives.scss
+++ b/wp-content/themes/defense360/sass/pages/_archives.scss
@@ -128,6 +128,8 @@
 		    }
 
 		    &:first-of-type {
+		    	border-bottom: 2px solid $archive-filter-gray;
+
 		    	@include breakpoint("medium") {
 			    	width: 85%;
 			    	align-self: center;
@@ -144,6 +146,34 @@
 			    	display: none;
 			    }
 
+			    &:after {
+			    	content: '\f004';
+			    	position: absolute;
+			    	right: 1rem;
+			    	top: 5px;
+			    	font-family: 'fontello';
+
+			    	@include breakpoint("medium") {
+			    		content: none;
+			    	}
+			    }
+
+			    &.mobile-active {
+			    	border-bottom: 0;
+
+			    	&:after {
+			    		content: '\f005';
+			    	}
+			    }
+			}
+
+			// Hide All List items on Mobile
+			&:not(:first-of-type) {
+				display: none;
+
+				@include breakpoint("medium") {
+					display: block;
+				}
 			}
 
 		    select {
