Related posts with Jetpack
Start developing related posts with Jetpack

--- a/wp-content/themes/defense360/sass/layout/_header.scss
+++ b/wp-content/themes/defense360/sass/layout/_header.scss
@@ -8,6 +8,7 @@ header.site-header {
 	margin-bottom: 2rem;
 	width: 100%;
 	background-color: $white;
+	z-index:50;
 
 	@include breakpoint("medium") {
 		padding-bottom: initial;
