--- a/wp-content/themes/defense360/sass/style.scss
+++ b/wp-content/themes/defense360/sass/style.scss
@@ -45,6 +45,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 	## Tables
   ## Social Share
   ## Pagination
+  ## Related Posts
 # Layout
 	## Header
 	## Footer
@@ -87,7 +88,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   'components/media',
   'components/tables',
   'components/social-share',
-  'components/pagination';
+  'components/pagination',
+  'components/related-posts';
 
 /*----------  Layout  ----------*/
 @import
