Add redirect name
- Adds a custom meta box to hold the name of the redirect
- Displays the name in “, via NAME” next to post author info
- Works in conjunction with page links to plugin

--- a/wp-content/themes/defense360/sass/pages/_posts.scss
+++ b/wp-content/themes/defense360/sass/pages/_posts.scss
@@ -176,6 +176,10 @@ article.post {
 		.posted-on {
 			color: $bright-green;
 		}
+
+		.posted-redirectInfo {
+			color: $gray;
+		}
 	}
 
 	/*----------  Tags  ----------*/
