Add Algolia styles

--- a/wp-content/themes/defense360/sass/style.scss
+++ b/wp-content/themes/defense360/sass/style.scss
@@ -46,6 +46,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   ## Social Share
   ## Pagination
   ## Related Posts
+  ## Autocomplete
 # Layout
 	## Header
 	## Footer
@@ -89,7 +90,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   'components/tables',
   'components/social-share',
   'components/pagination',
-  'components/related-posts';
+  'components/related-posts',
+  'components/autocomplete';
 
 /*----------  Layout  ----------*/
 @import
