Search results & minor style tweaks
- Style the search results page
- Minor tweaks for mobile

--- a/wp-content/themes/defense360/sass/pages/_posts.scss
+++ b/wp-content/themes/defense360/sass/pages/_posts.scss
@@ -19,7 +19,7 @@
 }
 
 /*----------  Global Post Styles  ----------*/
-article.post {
+article.post, article.page {
 	margin-bottom: 3rem;
 
 	@include breakpoint("medium") {
