--- a/wp-content/themes/defense360/sass/layout/_header.scss
+++ b/wp-content/themes/defense360/sass/layout/_header.scss
@@ -181,7 +181,7 @@ header.site-header {
 	nav.secondary-navigation {
 		background-color: $light-gray;
 		position: relative;
-		top: -115px;
+		top: -75px;
 
 		@include breakpoint("medium") {
 			top: 0;
@@ -299,7 +299,7 @@ header.site-header {
 	/*----------  Search Form  ----------*/
 	.header-searchFormContainer {
 		background-color: $black;
-		padding: 0.5rem;
+		padding: 1rem 0.5rem;
 		position: relative;
 		z-index: 10;
 		display: none;
@@ -329,7 +329,11 @@ header.site-header {
 				color: $search-gray;
 				text-transform: uppercase;
 				@include fontSize(14px);
-				line-height: 0;
+				line-height: 1;
+
+				@include breakpoint("medium") {
+					line-height: 0;
+				}
 
 				&:focus {
 					box-shadow: none;
