--- a/wp-content/themes/defense360/sass/style.scss
+++ b/wp-content/themes/defense360/sass/style.scss
@@ -58,6 +58,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   ## Posts
   ## Archives
   ## Series Archive
+  ## Search
 # Vendors
 --------------------------------------------------------------*/
 
@@ -105,7 +106,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   'pages/home',
   'pages/posts',
   'pages/archives',
-  'pages/series-archive';
+  'pages/series-archive',
+  'pages/search';
 
 /*----------  Vendors  ----------*/
 @import
