--- a/wp-content/themes/defense360/sass/pages/_search.scss
+++ b/wp-content/themes/defense360/sass/pages/_search.scss
@@ -19,6 +19,18 @@
 
 	// Results
 	article.post, article.page {
+		margin-bottom: 3rem;
+
+		@include breakpoint("medium") {
+			border-bottom: 2px solid $archive-filter-gray;
+			padding-bottom: 2rem;
+			margin-bottom: 2rem;
+		}
+
+		&:last-of-type {
+			border-bottom: 0;
+		}
+		
 		header.entry-header .entry-title {
 			@include fontSize(24px);
 		}
