--- a/wp-content/themes/defense360/sass/style.scss
+++ b/wp-content/themes/defense360/sass/style.scss
@@ -59,6 +59,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   ## Archives
   ## Series Archive
   ## Search
+  ## 404
 # Vendors
 --------------------------------------------------------------*/
 
@@ -107,7 +108,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   'pages/posts',
   'pages/archives',
   'pages/series-archive',
-  'pages/search';
+  'pages/search',
+  'pages/404';
 
 /*----------  Vendors  ----------*/
 @import
