--- a/wp-content/themes/defense360/sass/style.scss
+++ b/wp-content/themes/defense360/sass/style.scss
@@ -60,6 +60,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   ## Series Archive
   ## Search
   ## 404
+  ## About
 # Vendors
 --------------------------------------------------------------*/
 
@@ -109,7 +110,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   'pages/archives',
   'pages/series-archive',
   'pages/search',
-  'pages/404';
+  'pages/404',
+  'pages/about';
 
 /*----------  Vendors  ----------*/
 @import
