--- a/wp-content/themes/defense360/sass/components/_buttons.scss
+++ b/wp-content/themes/defense360/sass/components/_buttons.scss
@@ -1,7 +1,8 @@
 button,
 input[type="button"],
 input[type="reset"],
-input[type="submit"] {
+input[type="submit"],
+.link-btn {
 	background-color: $color__background-button;
 	color: $light-gray;
 	text-transform: uppercase;
@@ -10,6 +11,10 @@ input[type="submit"] {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
 	border: 0;
+
+	&:visited {
+		color: $light-gray;
+	}
 
 	&:hover {
 		color: $white;
