--- a/wp-content/themes/defense360/sass/pages/_archives.scss
+++ b/wp-content/themes/defense360/sass/pages/_archives.scss
@@ -5,7 +5,7 @@
 .archive {
 	header.page-header {
 		.page-title {
-			font-family: $font__SourceSans;
+			font-family: $font__ExpoSerif;
 			@include fontSize(28px);
 			font-weight: 600;
 			color: $black;
