--- a/wp-content/themes/defense360/sass/pages/_posts.scss
+++ b/wp-content/themes/defense360/sass/pages/_posts.scss
@@ -69,7 +69,7 @@ article.post, article.page {
 		}
 
 		.entry-title {
-			font-family: $font__SourceSans;
+			font-family: $font__ExpoSerif;
 			@include fontSize(28px);
 			font-weight: 600;
 			line-height: 1.25;
