--- a/wp-content/themes/defense360/sass/abstracts/_variables.scss
+++ b/wp-content/themes/defense360/sass/abstracts/_variables.scss
@@ -37,13 +37,12 @@ $color__border-abbr: #666;
 /*==================================
 =            Typography            =
 ==================================*/
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Source+Serif+Pro');
 
-$font__OpenSans: 'Open Sans', sans-serif;
-$font__SourceSans: 'Source Serif Pro', serif;
+$font__SourceSans: "source-sans-pro",sans-serif;
+$font__ExpoSerif: "expo-serif-pro",serif;
 
 
-$font__main: $font__OpenSans;
+$font__main: $font__SourceSans;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
