--- a/wp-content/themes/defense360/sass/pages/_home.scss
+++ b/wp-content/themes/defense360/sass/pages/_home.scss
@@ -104,7 +104,7 @@
 			}
 
 			.series-featuredTitle {
-				font-family: $font__SourceSans;
+				font-family: $font__ExpoSerif;
 				@include fontSize(24px);
 				font-weight: 600;
 				margin: 0.25rem 0 1rem;
@@ -132,7 +132,7 @@
 			}
 
 			.series-additionalTitle {
-				font-family: $font__SourceSans;
+				font-family: $font__ExpoSerif;
 				@include fontSize(18px);
 				font-weight: 600;
 				margin: 0.5rem 0 0;
