--- a/wp-content/themes/defense360/sass/pages/_series-archive.scss
+++ b/wp-content/themes/defense360/sass/pages/_series-archive.scss
@@ -6,7 +6,7 @@
 		margin-bottom: 2rem;
 
 		.page-title {
-			font-family: $font__SourceSans;
+			font-family: $font__ExpoSerif;
 			@include fontSize(28px);
 			font-weight: 600;
 			color: $black;
