--- a/wp-content/themes/defense360/sass/base/_typography.scss
+++ b/wp-content/themes/defense360/sass/base/_typography.scss
@@ -5,7 +5,7 @@ select,
 textarea {
 	color: $color__text-main;
 	font-family: $font__main;
-	@include fontSize(16px);
+	@include fontSize(18px);
 	line-height: $font__line-height-body;
 }
 
@@ -39,7 +39,7 @@ h1, h2, h3, h4, h5, h6 {
 	@include fontSize(20px);
 	font-weight: normal;
 	color: $gray;
-	margin: 1.5rem 0 1rem;
+	margin: 1.5rem 0 0.5rem;
 }
 
 %h4 {
@@ -48,7 +48,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-style: italic;
 	font-weight: normal;
 	color: $dark-gray;
-	letter-spacing: 0.7px;
+	letter-spacing: 0.4px;
 	margin: 1rem 0;
 }
 
@@ -74,6 +74,10 @@ hr {
 	border: 0;
 	height: 1px;
 	margin-bottom: 1.5em;
+}
+
+b, strong {
+	font-weight: 600;
 }
 
 dfn, cite, em, i {
@@ -133,6 +137,7 @@ big {
 a {
 	color: $color__link;
 	text-decoration: none;
+	@include transition(all .3s ease-in-out);
 
 	&:visited {
 		color: $color__link-visited;
