--- a/wp-content/themes/defense360/sass/pages/_home.scss
+++ b/wp-content/themes/defense360/sass/pages/_home.scss
@@ -63,9 +63,9 @@
 			}
 
 			header.entry-header .entry-title {
-				@include fontSize(18px);
+				@include fontSize(18.5px);
 				a {
-					color: $dark-gray;
+					color: $black;
 
 					&:hover {
 						color: $bright-green;
@@ -177,7 +177,7 @@
 
 		.series-sectionTitle, .series-learnMore {
 			color: $dark-green;
-			@include fontSize(14px);
+			@include fontSize(15px);
 			text-transform: uppercase;
 			font-weight: normal;
 			font-style: normal;
