--- a/wp-content/themes/defense360/sass/abstracts/_variables.scss
+++ b/wp-content/themes/defense360/sass/abstracts/_variables.scss
@@ -4,7 +4,7 @@
 $black: #000;
 $white: #fff;
 $dark-green: #36605a;
-$bright-green: red;
+$bright-green: #008e9d;
 $light-gray: #F1F1F1;
 $gray: #9b9b9b;
 $dark-gray: #4A4A4A;
