--- a/wp-content/themes/defense360/sass/components/_media.scss
+++ b/wp-content/themes/defense360/sass/components/_media.scss
@@ -21,6 +21,7 @@ embed,
 iframe,
 object {
 	max-width: 100%;
+	border: none;
 }
 
 /*--------------------------------------------------------------
