Add styles for WP DataTables

--- a/wp-content/themes/defense360/sass/style.scss
+++ b/wp-content/themes/defense360/sass/style.scss
@@ -90,7 +90,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   'components/social-share',
   'components/pagination',
   'components/related-posts',
-  'components/autocomplete';
+  'components/autocomplete',
+  'components/wpdatatables';
 
 /*----------  Layout  ----------*/
 @import
