--- a/wp-content/themes/defense360/sass/components/_wpdatatables.scss
+++ b/wp-content/themes/defense360/sass/components/_wpdatatables.scss
@@ -65,11 +65,36 @@
 .wpDataTablesWrapper {
 	label {
 		font-weight: normal !important;
+		font-size: 14px;
+		margin-bottom: 0 !important;
 	}
+}
+
+.wpdt-c {
+	text-align: center;
 }
 
 .wpdt-c .form-control {
 	font-size: 16px !important;
+}
+
+h2 {
+	text-align: center;
+}
+
+.wpdt-c::before {
+	content: "FILTER TABLE DATA";
+	font-size: 12px;
+	font-weight: 600;
+}
+
+.wpdt-c .data-t {
+	border-top: 1px #E7E7E7 solid !important;
+	border-bottom: 1px #E7E7E7 solid !important;
+	margin-top: 5px;
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 .wpDataTablesFilter .wpDataTableFilterSection:not(#wdt-clear-filters-button-block):not(#wdt-cf-search-filters-button-block) {
@@ -78,6 +103,31 @@
 	margin-right: 1.5rem !important;
 	margin-bottom: 1.5rem !important;
 	padding: 0;
+	text-align: left;
+}
+
+.wpDataTablesFilter .wpDataTableFilterSection .form-control {
+  border: 2px solid #E7E7E7 !important;
+	padding-left: 7px !important;
+	width: 200px !important;
+}
+
+::-webkit-input-placeholder {
+   font-style: italic;
+	 font-weight: lighter;
+}
+:-moz-placeholder {
+   font-style: italic;
+}
+::-moz-placeholder {
+   font-style: italic;
+}
+:-ms-input-placeholder {
+   font-style: italic;
+}
+
+.wpDataTable thead tr th {
+	color: #008e9d !important;
 }
 
 /*----------  Info  ----------*/
