Specify h2 styling for wpdatatables

--- a/wp-content/themes/defense360/sass/components/_wpdatatables.scss
+++ b/wp-content/themes/defense360/sass/components/_wpdatatables.scss
@@ -78,8 +78,8 @@
 	font-size: 16px !important;
 }
 
-h2 {
-	text-align: center;
+.content-wrapper-narrow h2 {
+	text-align: center !important;
 }
 
 .wpdt-c::before {
