Update fullWidth shortcode to allow other shortcodes to be used inside of it.

--- a/wp-content/themes/defense360/sass/pages/_posts.scss
+++ b/wp-content/themes/defense360/sass/pages/_posts.scss
@@ -264,12 +264,24 @@ article.post, article.page {
 
 	/*----------  Full Width Content  ----------*/
 	.fullWidthFeatureContent {
-		width: 100vw;
-		position: relative;
-		left: 50%;
-		right: 50%;
-		margin-left: -50vw;
-		margin-right: -50vw;
+	    width: 100vw;
+	    position: relative;
+	    left: 50%;
+	    right: 50%;
+	    margin-left: -50vw;
+	    margin-right: -50vw;
+	    text-align: center;
+
+	    .fullWidthInner {
+	        margin: 0 auto;
+
+	        // On small screens, we always want to override the inline styles and set a max width of less than the full width.
+	        &[style] {
+	        	@media screen and (max-width: $breakpoint-medium) {
+	        		max-width: 90% !important;
+	        	}
+	        }
+	    }
 	}
 
 }
