Edit data post layout and style

--- a/wp-content/themes/defense360/sass/style.scss
+++ b/wp-content/themes/defense360/sass/style.scss
@@ -108,7 +108,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   'pages/series-archive',
   'pages/search',
   'pages/404',
-  'pages/about';
+  'pages/about',
+  'pages/data';
 
 /*----------  Vendors  ----------*/
 @import
