--- a/wp-content/themes/defense360/sass/pages/_data.scss
+++ b/wp-content/themes/defense360/sass/pages/_data.scss
@@ -141,8 +141,16 @@ article.data, article.page {
 			margin-bottom: 0.2rem;
 		}
 
+    .data-fallbackImg {
+      p {
+        font-style: italic;
+        text-align: center;
+        color: #9b9b9b;
+      }
+    }
+
     .interactive-footer {
-      margin: 2rem auto 0 auto;
+      margin: 3rem auto 0 auto;
       max-width: 700px;
     }
 
@@ -163,7 +171,7 @@ article.data, article.page {
 			display: table;
 
 			@include breakpoint("medium") {
-				margin: 1rem auto;
+				margin: 2rem auto;
 			}
 
 			a {
