--- a/wp-content/themes/defense360/sass/style.scss
+++ b/wp-content/themes/defense360/sass/style.scss
@@ -109,7 +109,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   'pages/search',
   'pages/404',
   'pages/about',
-  'pages/data';
+  'pages/interactives';
 
 /*----------  Vendors  ----------*/
 @import
