Remove _interactives.scss

--- a/wp-content/themes/defense360/sass/style.scss
+++ b/wp-content/themes/defense360/sass/style.scss
@@ -108,8 +108,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   'pages/series-archive',
   'pages/search',
   'pages/404',
-  'pages/about',
-  'pages/interactives';
+  'pages/about';
 
 /*----------  Vendors  ----------*/
 @import
