--- a/wp-content/themes/defense360/sass/style.scss
+++ b/wp-content/themes/defense360/sass/style.scss
@@ -87,6 +87,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   'components/lists',
   'components/media',
   'components/tables',
+  'components/toc',
   'components/social-share',
   'components/pagination',
   'components/related-posts',
