--- a/wp-content/themes/defense360/sass/base/_typography.scss
+++ b/wp-content/themes/defense360/sass/base/_typography.scss
@@ -3,61 +3,73 @@ button,
 input,
 select,
 textarea {
-	color: $color__text-main;
-	font-family: $font__main;
-	@include fontSize(18px);
-	line-height: $font__line-height-body;
+  color: $color__text-main;
+  font-family: $font__main;
+  @include fontSize(18px);
+  line-height: $font__line-height-body;
 }
 
 /*================================
 =            Headings            =
 ================================*/
 
-h1, h2, h3, h4, h5, h6 {
-	clear: both;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  clear: both;
 }
 
 %h1 {
-	font-family: $font__ExpoSerif;
-	@include fontSize(28px);
-	font-weight: 600;
-	line-height: 1.25;
-	color: $black;
-	margin: 0.25rem 0 0 0;
+  font-family: $font__ExpoSerif;
+  @include fontSize(28px);
+  font-weight: 600;
+  line-height: 1.25;
+  color: $black;
+  margin: 0.25rem 0 0 0;
 }
 
 %h2 {
-	font-family: $font__SourceSans;
-	@include fontSize(24px);
-	font-weight: normal;
-	color: $bright-green;
-	margin: 2rem 0 1rem;
+  font-family: $font__SourceSans;
+  @include fontSize(24px);
+  font-weight: normal;
+  color: $bright-green;
+  margin: 2rem 0 1rem;
 }
 
 %h3 {
-	font-family: $font__SourceSans;
-	@include fontSize(20px);
-	font-weight: normal;
-	color: $gray;
-	margin: 1.5rem 0 0.5rem;
+  font-family: $font__SourceSans;
+  @include fontSize(20px);
+  font-weight: normal;
+  color: $gray;
+  margin: 1.5rem 0 0.5rem;
 }
 
 %h4 {
-	font-family: $font__SourceSans;
-	@include fontSize(18px);
-	font-style: italic;
-	font-weight: normal;
-	color: $dark-gray;
-	letter-spacing: 0.4px;
-	margin: 1rem 0;
+  font-family: $font__SourceSans;
+  @include fontSize(18px);
+  font-style: italic;
+  font-weight: normal;
+  color: $dark-gray;
+  letter-spacing: 0.4px;
+  margin: 1rem 0;
 }
 
-body.single, body.page {
-
-	h1 { @extend %h1 }
-	h2 { @extend %h2 }
-	h3 { @extend %h3 }
-	h4 { @extend %h4 }
+.entry-content {
+  h1:not([class]) {
+    @extend %h1;
+  }
+  h2:not([class]) {
+    @extend %h2;
+  }
+  h3:not([class]) {
+    @extend %h3;
+  }
+  h4:not([class]) {
+    @extend %h4;
+  }
 }
 
 /*============================
@@ -65,95 +77,105 @@ body.single, body.page {
 ============================*/
 
 p {
-	margin: 0 0 1rem;
-	line-height: 1.5;
+  margin: 0 0 1rem;
+  line-height: 1.5;
 }
 
 hr {
-	background-color: $color__background-hr;
-	border: 0;
-	height: 1px;
-	margin-bottom: 1.5em;
+  background-color: $color__background-hr;
+  border: 0;
+  height: 1px;
+  margin-bottom: 1.5em;
 }
 
-b, strong {
-	font-weight: 600;
+b,
+strong {
+  font-weight: 600;
 }
 
-dfn, cite, em, i {
-	font-style: italic;
+dfn,
+cite,
+em,
+i {
+  font-style: italic;
 }
 
 blockquote {
-	margin: 0 1.5em;
+  margin: 0 1.5em;
 }
 
-blockquote, q {
-	quotes: "" "";
+blockquote,
+q {
+  quotes: "" "";
 
-	&:before,
-	&:after {
-		content: "";
-	}
+  &:before,
+  &:after {
+    content: "";
+  }
 }
 
 address {
-	margin: 0 0 1.5em;
+  margin: 0 0 1.5em;
 }
 
 pre {
-	background: $color__background-pre;
-	font-family: $font__pre;
-	@include fontSize(14px);
-	line-height: $font__line-height-pre;
-	margin-bottom: 1.6em;
-	max-width: 100%;
-	overflow: auto;
-	padding: 1.6em;
+  background: $color__background-pre;
+  font-family: $font__pre;
+  @include fontSize(14px);
+  line-height: $font__line-height-pre;
+  margin-bottom: 1.6em;
+  max-width: 100%;
+  overflow: auto;
+  padding: 1.6em;
 }
 
-code, kbd, tt, var {
-	font-family: $font__code;
-	@include fontSize(14px);
+code,
+kbd,
+tt,
+var {
+  font-family: $font__code;
+  @include fontSize(14px);
 }
 
-abbr, acronym {
-	border-bottom: 1px dotted $color__border-abbr;
-	cursor: help;
+abbr,
+acronym {
+  border-bottom: 1px dotted $color__border-abbr;
+  cursor: help;
 }
 
-mark, ins {
-	background: $color__background-ins;
-	text-decoration: none;
+mark,
+ins {
+  background: $color__background-ins;
+  text-decoration: none;
 }
 
 big {
-	font-size: 125%;
+  font-size: 125%;
 }
 
 /*=============================
 =            Links            =
 =============================*/
 a {
-	color: $color__link;
-	text-decoration: none;
-	@include transition(all .3s ease-in-out);
+  color: $color__link;
+  text-decoration: none;
+  @include transition(all 0.3s ease-in-out);
 
-	&:visited {
-		color: $color__link-visited;
-	}
-	&:hover,
-	&:focus,
-	&:active {
-		color: $color__link-hover;
-	}
-	&:focus {
-		outline: thin dotted;
-	}
-	&:hover,
-	&:active {
-		outline: 0;
-	}
+  &:visited {
+    color: $color__link-visited;
+  }
+  &:hover,
+  &:focus,
+  &:active {
+    color: $color__link-hover;
+  }
+  &:focus {
+    outline: thin dotted;
+  }
+  &:hover,
+  &:active {
+    outline: 0;
+  }
 }
 
 /*==================================
@@ -161,37 +183,37 @@ a {
 ==================================*/
 
 .close-icon {
-	position: relative;
-    display: inline-block;
-    width: 35px;
-    height: 35px;
-    overflow: hidden;
+  position: relative;
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  overflow: hidden;
 
-    &::before, &::after {
-    	content: '';
-	    position: absolute;
-	    height: 2px;
-	    width: 100%;
-	    top: 50%;
-	    left: 0;
-	    margin-top: -1px;
-	    background: $black;
-    }
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    top: 50%;
+    left: 0;
+    margin-top: -1px;
+    background: $black;
+  }
 
-    &::before {
-    	-webkit-transform: rotate(45deg);
-	    -moz-transform: rotate(45deg);
-	    -ms-transform: rotate(45deg);
-	    -o-transform: rotate(45deg);
-	    transform: rotate(45deg);
-    }
+  &::before {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
 
-    &::after {
-    	-webkit-transform: rotate(-45deg);
-	    -moz-transform: rotate(-45deg);
-	    -ms-transform: rotate(-45deg);
-	    -o-transform: rotate(-45deg);
-	    transform: rotate(-45deg);
-    }
+  &::after {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
 }
-
