--- a/wp-content/themes/defense360/sass/base/_typography.scss
+++ b/wp-content/themes/defense360/sass/base/_typography.scss
@@ -32,18 +32,20 @@ h6 {
 }
 
 %h2 {
-  font-family: $font__SourceSans;
+  font-family: $font__ExpoSerif;
   @include fontSize(24px);
-  font-weight: normal;
-  color: $bright-green;
+  line-height: 1.3;
+  font-weight: 600;
+  color: $black;
   margin: 2rem 0 1rem;
 }
 
 %h3 {
-  font-family: $font__SourceSans;
-  @include fontSize(20px);
+  font-family: $font__ExpoSerif;
+  @include fontSize(22px);
+  line-height: 1.5;
   font-weight: normal;
-  color: $gray;
+  color: $black;
   margin: 1.5rem 0 0.5rem;
 }
 
