--- a/wp-content/themes/defense360/sass/components/_citation.scss
+++ b/wp-content/themes/defense360/sass/components/_citation.scss
@@ -6,8 +6,9 @@
     margin: 0 0 0.5rem;
     color: $black;
     font-family: $font__SourceSans;
-    @include fontSize(24px);
-    font-weight: bold;
+    @include fontSize(20px);
+    line-height: 1.6;
+    font-weight: 600;
   }
 
   p {
