--- a/wp-content/themes/defense360/sass/components/_toc.scss
+++ b/wp-content/themes/defense360/sass/components/_toc.scss
@@ -4,7 +4,8 @@
   &__title {
     margin: 0 0 0.25rem;
     color: $black;
-    @include fontSize(16px);
+    @include fontSize(14px);
+    line-height: 1.1;
     font-weight: bold;
     text-transform: uppercase;
 
