--- a/wp-content/themes/defense360/sass/pages/_posts.scss
+++ b/wp-content/themes/defense360/sass/pages/_posts.scss
@@ -178,6 +178,10 @@
         margin-top: 0;
       }
     }
+
+    .almanac__chart {
+      margin-bottom: 3rem;
+    }
   }
 
   /*----------  Post Meta  ----------*/
