--- a/wp-content/themes/defense360/assets/_scss/abstracts/_mixins.scss
+++ b/wp-content/themes/defense360/assets/_scss/abstracts/_mixins.scss
@@ -1,7 +1,7 @@
 // Rem output with px fallback
 $browser-context: 18px;
 @function calculateRem($size) {
-  $remSize: $size / $browser-context;
+  $remSize: calc($size / $browser-context);
   @return #{$remSize}rem;
 }
 
