--- a/wp-content/themes/defense360/assets/_scss/components/_citation.scss
+++ b/wp-content/themes/defense360/assets/_scss/components/_citation.scss
@@ -1,3 +1,7 @@
+@use 'abstracts/variables' as *;
+@use'abstracts/mixins' as *;
+@use 'base/typography' as *;
+
 .citation {
   margin-top: 1rem;
   margin-bottom: 3rem;
