--- a/wp-content/themes/defense360/assets/_scss/components/_fields.scss
+++ b/wp-content/themes/defense360/assets/_scss/components/_fields.scss
@@ -1,3 +1,7 @@
+@use 'abstracts/variables' as *;
+@use'abstracts/mixins' as *;
+@use 'base/typography' as *;
+
 input[type="text"],
 input[type="email"],
 input[type="url"],
