--- a/wp-content/themes/defense360/assets/_scss/components/_media.scss
+++ b/wp-content/themes/defense360/assets/_scss/components/_media.scss
@@ -1,3 +1,17 @@
+@use 'abstracts/variables' as *;
+@use'abstracts/mixins' as *;
+@use 'base/typography' as *;
+
+/*--------------------------------------------------------------
+## Captions
+--------------------------------------------------------------*/
+@use "captions" as *;
+
+/*--------------------------------------------------------------
+## Galleries
+--------------------------------------------------------------*/
+@use "galleries" as *;
+
 img {
 	height: auto; /* Make sure images are scaled correctly. */
 	max-width: 100%; /* Adhere to container width. */
@@ -23,13 +37,3 @@ object {
 	max-width: 100%;
 	border: none;
 }
-
-/*--------------------------------------------------------------
-## Captions
---------------------------------------------------------------*/
-@import "captions";
-
-/*--------------------------------------------------------------
-## Galleries
---------------------------------------------------------------*/
-@import "galleries";
