--- a/wp-content/themes/defense360/assets/_scss/components/_related-posts.scss
+++ b/wp-content/themes/defense360/assets/_scss/components/_related-posts.scss
@@ -1,3 +1,9 @@
+@use 'abstracts/variables' as *;
+@use'abstracts/mixins' as *;
+@use 'base/typography' as *;
+
+@use 'sass:math';
+
 /*==============================================
 =            Jetpack: Related Posts            =
 ==============================================*/
@@ -24,7 +30,7 @@
 			  border-bottom: 1px solid $latest-decoration-gray;
 			  border-top: 1px solid $latest-decoration-gray;
 			  top: 50%;
-			  margin-top: floor(-5px / 2);
+			  margin-top: math.floor(calc(-5px / 2));
 			  width: 800px;
 			  left: 100%;
 		  	  margin-left: 15px;
