--- a/wp-content/themes/defense360/assets/_scss/components/_tables.scss
+++ b/wp-content/themes/defense360/assets/_scss/components/_tables.scss
@@ -1,3 +1,7 @@
+@use 'abstracts/variables' as *;
+@use'abstracts/mixins' as *;
+@use 'base/typography' as *;
+
 table {
   margin: 0 0 2rem;
   width: 100%;
