--- a/wp-content/themes/defense360/assets/_scss/layout/_comments.scss
+++ b/wp-content/themes/defense360/assets/_scss/layout/_comments.scss
@@ -1,3 +1,7 @@
+@use 'abstracts/variables' as *;
+@use'abstracts/mixins' as *;
+@use 'base/typography' as *;
+
 .comment-content a {
 	word-wrap: break-word;
 }
