--- a/wp-content/themes/defense360/assets/_scss/modules/_accessibility.scss
+++ b/wp-content/themes/defense360/assets/_scss/modules/_accessibility.scss
@@ -1,3 +1,7 @@
+@use 'abstracts/variables' as *;
+@use'abstracts/mixins' as *;
+@use 'base/typography' as *;
+
 /* Text meant only for screen readers. */
 .screen-reader-text {
 	clip: rect(1px, 1px, 1px, 1px);
