--- a/wp-content/themes/defense360/assets/_scss/modules/_clearings.scss
+++ b/wp-content/themes/defense360/assets/_scss/modules/_clearings.scss
@@ -1,3 +1,7 @@
+@use 'abstracts/variables' as *;
+@use'abstracts/mixins' as *;
+@use 'base/typography' as *;
+
 .clear:before,
 .clear:after,
 .entry-content:before,
