--- a/wp-content/themes/defense360/assets/_scss/pages/_archives.scss
+++ b/wp-content/themes/defense360/assets/_scss/pages/_archives.scss
@@ -1,3 +1,8 @@
+@use 'abstracts/variables' as *;
+@use'abstracts/mixins' as *;
+@use 'base/typography' as *;
+@use 'vendors/fontello/fontello' as *;
+
 /*================================
 =            Archives            =
 ================================*/
